Adopt new Bootstrap 5 dark mode support

--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -4,7 +4,7 @@
 {% get_current_timezone as TIMEZONE %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}{% endblock %} | Baby Buddy</title>
