--- a/babybuddy/templates/babybuddy/filter.html
+++ b/babybuddy/templates/babybuddy/filter.html
@@ -23,7 +23,7 @@
 </form>
 
 <p>
-    <a class="btn btn-dark btn-sm"
+    <a class="btn btn btn-sm"
        data-bs-toggle="collapse"
        href="#filter_form"
        role="button"
