--- a/babybuddy/templates/babybuddy/welcome.html
+++ b/babybuddy/templates/babybuddy/welcome.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="px-2 py-5 bg-dark rounded-3">
+    <div class="px-2 py-5 bg rounded-3">
         <div class="container-fluid">
             <h1 class="display-3">{% trans "Welcome to Baby Buddy!" %}</h1>
             <p class="lead">
