--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="p-5 mb-4 bg-dark rounded-3 text-center">
+    <div class="p-5 mb-4 bg rounded-3 text-center">
         <div class="container-fluid py-1">
             <h1 id="timer-status"
                 class="display-1">
@@ -20,7 +20,7 @@
             </h1>
 
             {% if timer.child and CHILD_COUNT > 1 %}
-                <h2 class="text-muted">
+                <h2 class="text-body-secondary">
                     {{ timer.child }}
                 </h2>
             {% endif %}
@@ -28,7 +28,7 @@
             <p class="lead text-secondary">
                 {% trans "Started" %} {{ object.start }}
             </p>
-            <p class="text-muted">
+            <p class="text-body-secondary">
                 {% blocktrans trimmed with user=object.user_username %}
                     {{ timer }} created by {{ user }}
                 {% endblocktrans %}
