--- a/core/templates/core/widget_tag_editor.html
+++ b/core/templates/core/widget_tag_editor.html
@@ -20,7 +20,7 @@
     <div class="new-tags">
         <div class="create-tag-inputs input-group">
             <input class="form-control" type="text" name="" placeholder="{% trans "Tag name" %}">
-            <button id="add-tag" class="btn btn-outline-primary bg-dark" type="button">{% trans "Add" %}</button>
+            <button id="add-tag" class="btn btn-outline-primary bg" type="button">{% trans "Add" %}</button>
         </div>
         {% if widget.tag_suggestions.quick %}
             <span>{% trans "Recently used:" %}</span>
