--- a/dashboard/templates/cards/sleep_recent.html
+++ b/dashboard/templates/cards/sleep_recent.html
@@ -30,7 +30,7 @@
                     {% endif %}
                 </div>
                 {% blocktrans trimmed with since=sleep.date.date|dayssince %}
-                    <div class="text-center small text-muted">
+                    <div class="text-center small text-body-secondary">
                         {{ since }}
                     </div>
                 {% endblocktrans %}
