--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -12,7 +12,7 @@
         {% if html %}
             {{ html|safe }}
         {% else %}
-            <div class="px-2 py-5 bg-dark rounded-3 text-center display-5">
+            <div class="px-2 py-5 bg rounded-3 text-center display-5">
                 <div class="container-fluid">
                     <i class="icon-sad" aria-hidden="true"></i>
                     {% trans "There is not enough data to generate this report." %}
