--- a/babybuddy/templates/error/403_csrf_bad_origin.html
+++ b/babybuddy/templates/error/403_csrf_bad_origin.html
@@ -10,7 +10,7 @@
     <div class="alert alert-danger" role="alert">
         {{ main }} {{ reason }}
     </div>
-    <div class="px-2 py-5 bg-dark rounded-3">
+    <div class="px-2 py-5 bg rounded-3">
         <div class="container-fluid">
             <h2>{% trans "How to Fix" %}</h2>
             {% blocktrans trimmed with origin=origin %}
