--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -18,11 +18,10 @@
 {% block content %}
     {% for key, info in stats.items %}
         {% if info.wet > 0 or info.solid > 0 or info.empty > 0 %}
-            <div class="progress mt-3">
+            <div class="progress mt-3" role="progressbar">
 
                 {% if info.wet_pct > 0 %}
                     <div class="progress-bar bg-primary lead"
-                         role="progressbar"
                          style="width: {{ info.wet_pct|safe }}%;">
                         {{ info.wet|floatformat:'0' }}&nbsp;{% trans "wet" %}
                     </div>
@@ -30,7 +29,6 @@
 
                 {% if info.solid_pct > 0 %}
                     <div class="progress-bar bg-secondary lead"
-                         role="progressbar"
                          style="width: {{ info.solid_pct|safe }}%;">
                         {{ info.solid|floatformat:'0' }}&nbsp;{% trans "solid" %}
                     </div>
@@ -38,7 +36,6 @@
 
                 {% if info.empty_pct > 0 %}
                     <div class="progress-bar bg-transparent lead"
-                         role="progressbar"
                          style="width: {{ info.empty_pct|safe }}%;">
                         {{ info.empty|floatformat:'0' }}
                     </div>
