--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -23,7 +23,7 @@
         <a href="{% url 'core:timer-detail' timer.id %}"
            class="list-group-item list-group-item-action">
             <strong>{{ timer.title_with_child }}</strong>
-            <p class="text-muted small m-0">
+            <p class="text-body-secondary small m-0">
                 {% blocktrans trimmed with start=timer.start|time user=timer.user_username %}
                     Started by {{ user }} at {{ start }}
                 {% endblocktrans %}
