--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -13,7 +13,7 @@
 }
 
 // Right align main dropdown menu.
-.dropdown-menu-right {
+.dropdown-menu-end {
     right: 0;
     left: auto; // Reset the default from `.dropdown-menu`
 }
