--- a/core/templates/core/quick_timer_nav.html
+++ b/core/templates/core/quick_timer_nav.html
@@ -10,12 +10,12 @@
                href="#"
                role="button"
                id="quick-timer-menu-toggle"
-               data-toggle="dropdown"
+               data-bs-toggle="dropdown"
                aria-haspopup="true"
                aria-expanded="false"><i class="icon-2x icon-timer" aria-hidden="true"></i>
             </a>
 
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="quick-timer-menu-toggle">
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="quick-timer-menu-toggle">
                 <h6 class="dropdown-header">{% trans "Quick Start Timer For…" %}</h6>
                 {% for child in children %}
                     <button class="dropdown-item d-flex align-items-center" type="submit" name="child" value="{{ child.pk }}">
