--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -32,7 +32,7 @@
             {% card_feeding_last_method object %}
         </div>
         <div class="col-sm-6 col-lg-4">
-            {% card_feeding_day object %}
+            {% card_feeding_recent object %}
         </div>
         <div class="col-sm-6 col-lg-4">
             {% card_statistics object %}
