Updtate french translation, correction, modification duration.py line 110 & 118 to ease the translation

--- a/dashboard/templates/cards/sleep_recent.html
+++ b/dashboard/templates/cards/sleep_recent.html
@@ -25,7 +25,7 @@
                         {% blocktrans trimmed count counter=sleep.count %}
                             {{ counter }} sleep
                         {% plural %}
-                            {{ counter }} sleep
+                            {{ counter }} sleeps
                         {% endblocktrans %}
                     {% endif %}
                 </div>
