--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -42,7 +42,7 @@
                             <a href="{% url 'core:child' child.slug %}">{{ child.first_name }}</a>
                         </th>
                         <td>{{ child.last_name }}</td>
-                        <td>{{ child.birth_date }}</td>
+                        <td>{{ child.birth_datetime }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
