--- a/reports/templates/reports/weight_change.html
+++ b/reports/templates/reports/weight_change.html
@@ -5,6 +5,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% include 'reports/breadcrumb_common_chunk.html' with target_url='reports:report-weight-change-child' %}
+    {% include 'reports/breadcrumb_common_chunk.html' with target_url=target_url %}
+    
     <li class="breadcrumb-item active" aria-current="page">{% trans "Weight" %}</li>
 {% endblock %}
