--- a/babybuddy/templates/babybuddy/form.html
+++ b/babybuddy/templates/babybuddy/form.html
@@ -7,9 +7,15 @@
         {% csrf_token %}
         {% for field in form %}
             {{ field.widget }}
-            <div class="row">
-                {% include 'babybuddy/form_field.html' %}
-            </div>
+            {% if field|field_type == "startenddatefield" %}
+                <div class="row">
+                    {% include 'babybuddy/form_field_start_end_date.html' %}
+                </div>
+            {% else %}
+                <div class="row">
+                    {% include 'babybuddy/form_field.html' %}
+                </div>
+            {% endif %}
         {% endfor %}
         <button type="submit" class="submit-primary btn btn-primary btn-lg">{% trans "Submit" %}</button>
     </form>
