refactor: quick actions
Use a tempalte tag to generate the content
fix the issue with the inconsitent widths

--- a/babybuddy/static_src/css/child.css
+++ b/babybuddy/static_src/css/child.css
@@ -26,6 +26,18 @@ body {
   background-color: var(--bs-body-bg);
 }
 
+.favorite-actions-container {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+.favorite-action-containers {
+  width: 30%;
+  margin-bottom: 15px;
+}
+
 .since {
   font-size: 12px;
 }
