feat: create radio select widget
Currently the ui uses lots of drop downs, radio selects are better for
mobile views, but can also work well on desktop ui

This commit creates the radio select widget

--- a/babybuddy/static_src/css/child.css
+++ b/babybuddy/static_src/css/child.css
@@ -265,6 +265,12 @@ form {
   font-size: 20px;
 }
 
+.radio-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+}
+
 .checkbox-container {
   display: flex;
   justify-content: space-between;
