--- a/babybuddy/static_src/css/child.css
+++ b/babybuddy/static_src/css/child.css
@@ -46,7 +46,8 @@ img.purple,
   color: var(--green-theme-color);
 }
 
-img.green, .green img {
+img.green,
+.green img {
   filter: var(--green-theme-filter);
 }
 
@@ -56,7 +57,8 @@ img.green, .green img {
   --form-background-color: var(--yellow-theme-light-color);
 }
 
-img.yellow, .yellow img {
+img.yellow,
+.yellow img {
   filter: var(--yellow-theme-filter);
 }
 
@@ -147,7 +149,10 @@ body {
   text-align: center;
 }
 
-a:link, a:visited, a:hover, a:active {
+a:link,
+a:visited,
+a:hover,
+a:active {
   text-decoration: none;
   color: inherit;
 }
@@ -175,6 +180,7 @@ a:link, a:visited, a:hover, a:active {
   z-index: -1;
   bottom: 0;
 }
+
 /* FORMS */
 
 .form-header {
@@ -210,7 +216,7 @@ form {
 }
 
 .col-form-label {
-   color: var(--form-label-color);
+  color: var(--form-label-color);
 }
 
 /* FORM INPUTS */
