refactor: better fieldset implementation
Field set allows you to use custom templates for fields, the layout it
tempalte is required to exist, and is automatically pulled via include

--- a/babybuddy/static_src/css/child.css
+++ b/babybuddy/static_src/css/child.css
@@ -283,6 +283,9 @@ form {
 .checkbox-container {
   display: flex;
   justify-content: space-between;
+}
+
+form > div {
   margin-bottom: 15px;
 }
 
